--- a/packages/client/src/scss/components/shared/PrimaryButton.module.scss
+++ b/packages/client/src/scss/components/shared/PrimaryButton.module.scss
@@ -2,13 +2,17 @@
 
 .primaryButton {
   @include flexCenter(row);
-  @include heading("h6", "phone", "black");
-  color: getColor("tan-color-extra-light");
+  @include heading("h6", "phone", "white");
   font-weight: 550;
   border: 1.5px solid getColor("black-75-1");
   background-color: getColor("primary-1");
   border-radius: 10px;
   padding: 0.5rem 2.5rem;
+
+  @media screen and (max-width: 600px) {
+    @include paragraph("phone", "white");
+    padding: 0.5rem 1.5rem;
+  }
 
   transition: $crispyTransformTransition;
 
