--- a/packages/client/src/scss/pages/Settings.module.scss
+++ b/packages/client/src/scss/pages/Settings.module.scss
@@ -11,6 +11,24 @@
   width: 100%;
   padding: 8rem;
   gap: 8rem;
+
+  @media screen and (max-width: 1700px) {
+    gap: 4rem;
+    padding: 8rem 4rem;
+  }
+
+  @media screen and (max-width: 1500px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (max-width: 600px) {
+    padding: 8rem 2rem;
+  }
+
+  @media screen and (max-width: 400px) {
+    padding: 8rem 0.5rem;
+  }
 }
 
 .accountSettingsContainer {
@@ -22,9 +40,24 @@
   padding: 4rem;
   border-radius: 25px;
 
+  @media screen and (max-width: 900px) {
+    padding: 4rem 2rem;
+  }
+  @media screen and (max-width: 600px) {
+    gap: 1.5rem;
+  }
+
   h4 {
     @include heading("h4", "laptop", "black");
     text-align: center;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h4", "tablet", "black");
+    }
+
+    @media screen and (max-width: 600px) {
+      @include heading("h4", "phone", "black");
+    }
   }
 }
 
