Massive refactoring of source code part 2.

--- a/packages/client/src/scss/components/others/Modals.module.scss
+++ b/packages/client/src/scss/components/others/Modals.module.scss
@@ -6,7 +6,7 @@
   z-index: 3;
   top: 0;
   width: 100%;
-  max-width: $authFormPageTemplateFormWidth;
+  max-width: 30rem;
   padding: 0.75rem 0.5rem;
   padding-bottom: 1rem;
   background-color: getColor("secondary-color-3.4");
