--- a/packages/client/src/scss/components/page/EntityInfo.module.scss
+++ b/packages/client/src/scss/components/page/EntityInfo.module.scss
@@ -287,7 +287,7 @@
   width: 40rem;
   height: 30rem;
   gap: 1rem;
-  border: 1px solid black;
+  justify-content: flex-start;
 
   @media screen and (max-width: 1000px) {
     width: 30rem;
