--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -24,7 +24,7 @@
   @include flexCenter(row);
   justify-content: flex-start;
   width: auto;
-  gap: 1rem;
+  width: 100%;
   height: 100%;
 
   @media screen and (max-width: 400px) {
@@ -41,10 +41,10 @@
 
   h6 {
     @include heading("h6", "phone", "white");
+    @include handlePossibleLongWord(2);
     width: 100%;
-    padding-right: 0.5rem;
-    white-space: nowrap;
-    text-align: center;
+    padding: 0rem 0.75rem;
+    text-align: start;
 
     @media screen and (max-width: 600px) {
       @include paragraph("tablet", "white");
