--- a/packages/client/src/scss/components/shared/Navbar.module.scss
+++ b/packages/client/src/scss/components/shared/Navbar.module.scss
@@ -15,6 +15,8 @@
 
 .navbarProfileContainer {
   @include flexCenter(row);
+  justify-content: flex-start;
+  width: 90%;
   gap: 1rem;
 
   @media screen and (max-width: 650px) {
@@ -23,6 +25,8 @@
 
   h6 {
     @include heading("h6", "tablet", "white");
+    @include handlePossibleLongWord(2);
+    width: 75%;
 
     @media screen and (max-width: 650px) {
       @include paragraph("phone", "white");
