--- a/packages/client/src/scss/pages/Profile.module.scss
+++ b/packages/client/src/scss/pages/Profile.module.scss
@@ -30,6 +30,7 @@
   padding: 4rem;
   border-radius: 25px;
   background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
+  width: 40%;
 
   @media screen and (max-width: 1400px) {
     padding: 4rem 3rem;
@@ -45,7 +46,11 @@
 
   h4 {
     @include heading("h4", "laptop", "black");
+    @include handlePossibleLongWord(2);
+    text-align: center;
     font-weight: 550;
+    width: 100%;
+    padding: 0 1rem;
 
     @media screen and (max-width: 1200px) {
       @include heading("h4", "tablet", "black");
