--- a/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
+++ b/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
 
-  img {
+  > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -149,6 +149,15 @@
   justify-content: space-between;
   padding: 1rem;
   width: 100%;
+
+  select {
+    color: getColor("black-100-1");
+    font-weight: 550;
+
+    > option {
+      background-color: getColor("tan-color-extra-light");
+    }
+  }
 }
 
 .signupBarLogo {
