--- a/packages/client/src/scss/components/shared/LangSwitcher.module.scss
+++ b/packages/client/src/scss/components/shared/LangSwitcher.module.scss
@@ -4,10 +4,18 @@
   @include flexCenter(row);
   gap: 0.25rem;
 
+  @media screen and (max-width: 600px) {
+    gap: 0.1rem;
+  }
+
   img {
     width: 4rem;
     border: 1.5px solid getColor("black-75-1");
     height: auto;
+
+    @media screen and (max-width: 600px) {
+      width: 3rem;
+    }
   }
 }
 
@@ -18,6 +26,10 @@
     border: none;
     color: white;
     font-size: 1.5rem;
+
+    @media screen and (max-width: 600px) {
+      font-size: 1rem;
+    }
 
     option {
       background-color: black;
