Added a way for the user to delete an entity.

--- a/packages/client/src/scss/components/shared/EntityCard.module.scss
+++ b/packages/client/src/scss/components/shared/EntityCard.module.scss
@@ -50,3 +50,10 @@
   @include flexCenter(column);
   text-decoration: none;
 }
+
+.entityComponentWrapper {
+  @include flexCenter(column);
+  position: relative;
+  width: 100%;
+  height: auto;
+}
