--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -77,3 +77,10 @@
     }
   }
 }
+
+.entityComponentWrapper {
+  @include flexCenter(column);
+  position: relative;
+  width: 100%;
+  height: auto;
+}
