--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -37,6 +37,7 @@
     width: auto;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    background-color: white;
   }
 
   h6 {
