--- a/packages/client/src/scss/components/shared/EntityMutationMenu.module.scss
+++ b/packages/client/src/scss/components/shared/EntityMutationMenu.module.scss
@@ -126,6 +126,9 @@
     &:nth-of-type(2) {
       color: green;
     }
+    &:nth-of-type(3) {
+      color: purple;
+    }
 
     &:hover {
       transform: scale(1.2);
