--- a/packages/client/src/scss/abstracts/globals.scss
+++ b/packages/client/src/scss/abstracts/globals.scss
@@ -65,3 +65,96 @@ body {
   width: 100%;
   min-height: 100vh;
 }
+
+.hiddenLTR {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+
+  transition: all 0.75s;
+}
+
+.showLTR {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0%);
+  transition: all 0.75s;
+
+  &:nth-of-type(1) {
+    transition-delay: 100ms;
+  }
+
+  &:nth-of-type(2) {
+    transition-delay: 200ms;
+  }
+
+  &:nth-of-type(3) {
+    transition-delay: 300ms;
+  }
+
+  &:nth-of-type(4) {
+    transition-delay: 400ms;
+  }
+}
+
+.hiddenRTL {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(100%);
+
+  transition: all 0.75s;
+}
+
+.showRTL {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0%);
+  transition: all 0.75s;
+
+  &:nth-of-type(1) {
+    transition-delay: 100ms;
+  }
+
+  &:nth-of-type(2) {
+    transition-delay: 200ms;
+  }
+
+  &:nth-of-type(3) {
+    transition-delay: 300ms;
+  }
+
+  &:nth-of-type(4) {
+    transition-delay: 400ms;
+  }
+}
+
+.hiddenBTT {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(100%);
+
+  transition: all 0.75s;
+}
+
+.showBTT {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0%);
+  transition: all 0.75s;
+
+  &:nth-of-type(1) {
+    transition-delay: 100ms;
+  }
+
+  &:nth-of-type(2) {
+    transition-delay: 200ms;
+  }
+
+  &:nth-of-type(3) {
+    transition-delay: 300ms;
+  }
+
+  &:nth-of-type(4) {
+    transition-delay: 400ms;
+  }
+}
