--- a/packages/client/src/scss/pages/Home.module.scss
+++ b/packages/client/src/scss/pages/Home.module.scss
@@ -19,6 +19,10 @@
 
   @media screen and (max-width: 1200px) {
     height: 65rem;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   @media screen and (max-width: 650px) {
