--- a/packages/client/src/scss/pages/FAQ.module.scss
+++ b/packages/client/src/scss/pages/FAQ.module.scss
@@ -191,6 +191,7 @@
 
   p {
     @include paragraph("laptop", "black");
+    width: 100%;
 
     @media screen and (max-width: 700px) {
       @include paragraph("tablet", "black");
