--- a/packages/client/src/scss/components/shared/Footer.module.scss
+++ b/packages/client/src/scss/components/shared/Footer.module.scss
@@ -7,6 +7,7 @@
   background-color: getColor("primary-1");
   margin-top: auto;
   gap: 4rem;
+  word-break: break-all;
 
   @media screen and (max-width: 1500px) {
     padding: 4rem 8rem;
