--- a/packages/client/src/scss/components/shared/PageTitle.module.scss
+++ b/packages/client/src/scss/components/shared/PageTitle.module.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-bottom: 1.5px solid getColor("black-75-1");
+  word-break: break-all;
 
   @media screen and (max-width: 1200px) {
     height: 57rem;
