--- a/packages/client/src/scss/pages/MultiViewTool.module.scss
+++ b/packages/client/src/scss/pages/MultiViewTool.module.scss
@@ -71,20 +71,21 @@
   }
 
   h2 {
-    @include heading("h2", "laptop", "black");
+    @include heading("h3", "laptop", "black");
     font-weight: 550;
     letter-spacing: 3px;
     text-align: center;
+    word-break: break-all;
 
     @media screen and (max-width: 1200px) {
-      @include heading("h2", "tablet", "black");
+      @include heading("h3", "tablet", "black");
     }
 
     @media screen and (max-width: 600px) {
-      @include heading("h2", "phone", "black");
+      @include heading("h3", "phone", "black");
     }
     @media screen and (max-width: 375px) {
-      @include heading("h3", "phone", "black");
+      @include heading("h4", "phone", "black");
     }
   }
 }
